# mcpserverexample

./: pyproject.toml
src/mcp_server/: __main__.py  deployment.py
